public/css/main-style.css
html {
    font-size: 62.5%;
}

body {
    font-size: 1.5em;
    line-height: 1.6;
    font-weight: 400;
    font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
    color: #222;
    background-color: rgb(14, 41, 53);
    padding:3rem 0rem 7rem 0rem;
}

h1, h2, h3, h4, h5, h6 {
    margin-top: 0;
    margin-bottom: 2rem;
    font-weight: 300; }
h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }

p {
    margin-top: 0;
}

a {
    color: #8B9BA0;
    text-decoration:none; }
a:hover {
    color: #565B5D;
    text-decoration:none;}

.container {
    position: relative;
    width: 100%;
    max-width: 960px;
    margin: 0 auto;
    padding: 0 20px;
    box-sizing: border-box; }

.column {
    width: 100%;
    float: left;
    box-sizing: border-box;
}

.columns label {
    text-align: left;
}

/* Buttons */
.button,
button,
.buttonStyling,
input[type="reset"],
input[type="button"] {
    display: inline-block;
    height: 38px;
    padding: 0 30px;
    color: #555;
    text-align: center;
    font-size: 11px;
    font-weight: 600;
    line-height: 38px;
    letter-spacing: .1rem;
    text-transform: normal;
    text-decoration: none;
    white-space: nowrap;
    background-color: transparent;
    border-radius: 0px;
    border: 1px solid #bbb;
    cursor: pointer;
    box-sizing: border-box; }
.button:hover,
button:hover, .buttonStyling:hover,
input[type="submit"]:hover,
input[type="reset"]:hover,
input[type="button"]:hover,
.button:focus,
button:focus, .buttonStyling:focus,
input[type="submit"]:focus,
input[type="reset"]:focus,
input[type="button"]:focus {
    color: #333;
    border-color: #888;
    outline: 0; }
.button.button-submit,
button.button-submit, .buttonStyling.button-submit,
input[type="submit"].button-submit,
input[type="reset"].button-submit,
input[type="button"].button-submit {
    color: #FFF;
    background-color: #126471;
    border-color: #126471; }
.button.button-submit:hover,
button.button-submit:hover, .buttonStyling.button-submit:hover,
input[type="submit"].button-submit:hover,
input[type="reset"].button-submit:hover,
input[type="button"].button-submit:hover,
.button.button-submit:focus, .buttonStyling:focus,
button.button-submit:focus,
input[type="submit"].button-submit:focus,
input[type="reset"].button-submit:focus,
input[type="button"].button-submit:focus {
    color: #FFF;
    background-color: #054D58;
    border-color: #054D58;
}


/* Forms */
input[type="email"],
input[type="number"],
input[type="search"],
input[type="text"],
input[type="tel"],
input[type="url"],
input[type="password"],
textarea,
select {
    height: 38px;
    padding: 6px 10px;
    background-color: #fff;
    border:none;
    border-bottom: solid 2px #c9c9c9;
    box-shadow: none;
    box-sizing: border-box;
    outline: none;
}

input[type="email"],
input[type="number"],
input[type="search"],
input[type="text"],
input[type="tel"],
input[type="url"],
input[type="password"],
textarea {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none; }
textarea {
    min-height: 65px;
    padding-top: 6px;
    padding-bottom: 6px; }
input[type="email"]:focus,
input[type="number"]:focus,
input[type="search"]:focus,
input[type="text"]:focus,
input[type="tel"]:focus,
input[type="url"]:focus,
input[type="password"]:focus,
textarea:focus,
select:focus {
    border-bottom: 1px solid #317F8C;
    outline: none; }
label,
legend {
    display: block;
    margin-bottom: .1rem;
    font-weight: normal; }
fieldset {
    padding: 0;
    border-width: 0; }
input[type="checkbox"],
input[type="radio"] {
    display: inline; }
label > .label-body {
    display: inline-block;
    margin-left: .5rem;
    font-weight: normal; }

.full-width {
    width: 100%;
    box-sizing: border-box; }
.pull-right {
    float: right; }
.pull-left {
    float: left; }


@media (min-width: 400px) {
    .container {
        width: 85%;
        padding: 0; }
}

@media (min-width: 550px) {
    .container {
        width: 80%; }
    h1 { font-size: 5.0rem; }
    h2 { font-size: 4.2rem; }
    h3 { font-size: 3.6rem; }
    h4 { font-size: 2.2rem; }
    h5 { font-size: 2.0rem; }
    h6 { font-size: 1.5rem; }
}


button,
.button {
    margin-bottom: 1rem; }
input,
textarea,
select,
fieldset {
    margin-bottom: 1.5rem; }
pre,
blockquote,
dl,
figure,
table,
p,
ul,
ol,
form {
    margin-bottom: 2.5rem; }

.container:after,
.row:after
{
    content: "";
    display: table;
    clear: both; }

/* Login Style */

.form-signin {
    max-width: 260px;
    margin: 0 auto;
    background-color: #fff;
    border-radius: 0px;
    padding: 35px 40px;
}

.title{
    color:#E6E9EA;
    text-align:center;
}

.forgot{
    font-size: 1.3rem;
}
.row {
    text-align: center;
}

.deniedMsg {
    color: red;
}
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
    display: none !important;
}

#particles-js {
    position: absolute;
    width: 100%;
    height: 100%;
    /*background-color: #b61924;*/
    background-image: url("");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 50% 50%;
}
canvas {
    display: block;
    vertical-align: bottom;
}
#best {
    margin: 0 auto;
    position: absolute;
    width: 100%;
    height: 100%;
}
html, body {
    max-width: 100%;
    overflow-x: hidden;
}

